forum bugfix: too long signatures on one line breaks layout

--- a/dd-wrt-forum-inspired-themes.user.styl
+++ b/dd-wrt-forum-inspired-themes.user.styl
@@ -2495,6 +2495,10 @@ b() { box-shadow: arguments }
       // https://forum.dd-wrt.com/phpBB2/viewtopic.php?t=301950
       font-size: 14px
       line-height: 1.4em
+      max-width: 940px
+      display: block
+      text-overflow: ellipsis
+      overflow: auto
     }
     &.four_columns {
       table[width='928'] {
